<resources>
    <string name="app_name">SiEbull</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="title">Title</string>
    <string name="published_date">Published Date</string>
    <string name="save_bookmark">Save Bookmark?</string>
    <string name="bullypedia">Bullypedia</string>
    <string name="profile">Profile</string>
    <string name="askbully">Askbully</string>
    <string name="tuliskan_ceritamu_disini">Tuliskan ceritamu disini...</string>
    <string name="kirim">Kirim</string>
    <string name="hallobully">Hallobully</string>
    <string name="hallo">Hallo,</string>
    <string name="your_favorite">Your Favorite</string>
</resources>