<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.landingPage.LandingPage"
    android:background="@color/bg_ebull">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/nav_view"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/bg_ebull"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/btn_ebull"
                    android:minHeight="?attr/actionBarSize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/btn_card_text"
                        android:textSize="28sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/hallo"
                        android:textColor="@color/btn_card_text"
                        android:textSize="14sp"/>
                </androidx.appcompat.widget.Toolbar>

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/rounded_component"
                    android:elevation="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar_main" />

                <me.relex.circleindicator.CircleIndicator
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:elevation="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewPager" />

                <TextView
                    android:id="@+id/tv_feature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="New Feature"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/indicator" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_bullypedia"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    app:cardBackgroundColor="@color/btn_ebull"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_feature">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <ImageView
                            android:id="@+id/iv_bullypedia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:src="@drawable/ic_bullypedia"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_bullypedia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="64dp"
                            android:text="@string/bullypedia"
                            android:textColor="@color/btn_card_text"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toBottomOf="@+id/iv_bullypedia"
                            app:layout_constraintStart_toEndOf="@+id/iv_bullypedia"
                            app:layout_constraintTop_toTopOf="@+id/iv_bullypedia" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_askbully"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    app:cardBackgroundColor="@color/btn_ebull"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_bullypedia">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <ImageView
                            android:id="@+id/iv_askbully"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:src="@drawable/ic_askbully"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_askbully"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="64dp"
                            android:text="@string/askbully"
                            android:textColor="@color/btn_card_text"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toBottomOf="@+id/iv_askbully"
                            app:layout_constraintStart_toEndOf="@+id/iv_askbully"
                            app:layout_constraintTop_toTopOf="@+id/iv_askbully" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_hallobully"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    app:cardBackgroundColor="@color/btn_ebull"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_askbully">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <ImageView
                            android:id="@+id/iv_hallobully"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:src="@drawable/ic_hallobully"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_hallobully"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="64dp"
                            android:text="@string/hallobully"
                            android:textColor="@color/btn_card_text"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toBottomOf="@+id/iv_hallobully"
                            app:layout_constraintStart_toEndOf="@+id/iv_hallobully"
                            app:layout_constraintTop_toTopOf="@+id/iv_hallobully" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_bookmarked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/your_favorite"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_hallobully" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_bookmarked"
                    android:layout_width="match_parent"
                    android:layout_height="560dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_bookmarked">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_news"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cl_bookmarked"
                        app:layout_constraintVertical_bias="0.0"
                        tools:listitem="@layout/item_news" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--        <androidx.recyclerview.widget.RecyclerView-->
                <!--            android:id="@+id/rv_news"-->
                <!--            android:layout_width="match_parent"-->
                <!--            android:layout_height="match_parent"-->
                <!--            android:layout_marginStart="8dp"-->
                <!--            android:layout_marginTop="16dp"-->
                <!--            android:layout_marginEnd="8dp"-->
                <!--            android:layout_marginBottom="16dp"-->
                <!--            app:layout_constraintBottom_toBottomOf="@id/nav_view"-->
                <!--            app:layout_constraintEnd_toEndOf="@id/nav_view"-->
                <!--            app:layout_constraintStart_toStartOf="parent"-->
                <!--            app:layout_constraintTop_toBottomOf="@+id/tv_bookmarked"-->
                <!--            app:layout_constraintVertical_bias="0.0"-->
                <!--            tools:listitem="@layout/item_news" />-->

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/btn_ebull"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>